--- a/src/FP/Bundle/WHMCSBundle/Resources/translations/messages.en.yml
+++ b/src/FP/Bundle/WHMCSBundle/Resources/translations/messages.en.yml
@@ -1,7 +1,9 @@
 #lookup: "translation"
-signin: "Signin"
-signup: "Signup" 
+signin: "Sign-in"
+signup: "Sign-up" 
 signup.already: "Already a signed up?"
-Password: "Password"
-Password again: "Password again"
-Email: "Email"
+password: "Password"
+password.again: "Password again"
+password.lost: "Lost password"
+email: "E-mail address"
+login.incorrect: "Incorrect log-in"
